syntax="proto3";

//package go.micro.service.user;
option go_package = ".;proto";

service UserService {
  rpc SignUp(SignUpReq) returns (SignUpResp) {}  // 用户注册服务
  rpc SignIn(SignInReq) returns (SignInResp) {}  // 用户登录服务
  rpc GetUserInfo(UserInfoReq) returns (UserInfoResp) {} // 获取用户信息
  rpc GetUserFiles(UserFilesReq) returns (UserFilesResp) {} // 获取用户文件
  rpc RenameUserFile(RenameUserFileReq) returns (RenameUserFileResp) {} // 用户文件重命名
  rpc DeleteUserFile(DeleteUserFileReq) returns (DeleteUserFileResp) {}
  rpc DeleteFile(DeleteFileReq) returns (DeleteFileResp) {}
  rpc DeleteUserFileAndUniqueFile(DeleteAllReq) returns (DeleteAllResp) {}
}

//---------------- 注册 ----------------
message SignUpReq {
  string username = 1;
  string password = 2;
}

message SignUpResp {
  int32 code = 1;
  string msg = 2;
}

//---------------- 登陆 ----------------
message SignInReq {
  string username = 1;
  string password = 2;
}

message SignInResp {
  int32 code = 1;
  string msg = 2;
  string token = 3;
}

//---------------- 获取用户信息 ----------------
message UserInfoReq {
  string username = 1;
}

message UserInfoResp {
  int32 code = 1;
  string msg = 2;
  string username = 3;
  string email = 4;
  string phone = 5;
  string signupAt = 6;
  string lastActiveAt = 7;
  int32 status = 8;
}

//---------------- 获取用户文件 ----------------
message UserFilesReq {
  string username = 1;
  int32 limit = 2;
}

message UserFilesResp {
  int32 code = 1;
  string msg = 2;
  bytes data = 3;
}

//---------------- 用户文件重命名 ----------------
message RenameUserFileReq {
  string username = 1;
  string filehash = 2;
  string newFilename = 3;
}

message RenameUserFileResp {
  int32 code = 1;
  string msg = 2;
  bytes data = 3;
}

//---------------- 删除用户文件记录 ----------------
message DeleteUserFileReq {
  string username = 1;
  string filehash = 2;
}

message DeleteUserFileResp {
  int32 code = 1;
  string msg = 2;
}

//---------------- 删除唯一文件记录（也标志着删除了唯一文件） ----------------
message DeleteFileReq {
  string filehash = 2;
}

message DeleteFileResp {
  int32 code = 1;
  string msg = 2;
}

//---------------- 删除用户文件和唯一文件记录 ----------------
message DeleteAllReq {
  string username = 1;
  string filehash = 2;
}

message DeleteAllResp {
  int32 code = 1;
  string msg = 2;
}
